--- a/.github/workflows/update-cvrf.yml
+++ b/.github/workflows/update-cvrf.yml
@@ -43,8 +43,11 @@ jobs:
         id: check
         shell: bash
         run: |
-          git diff --quiet diag/cvrf_products.json diag/cvrf_cache.json || \
+          if [ ! -f diag/cvrf_products.json ] || [ ! -f diag/cvrf_cache.json ]; then
             echo "changed=true" >> $GITHUB_OUTPUT
+          elif ! git diff --quiet diag/cvrf_products.json diag/cvrf_cache.json; then
+            echo "changed=true" >> $GITHUB_OUTPUT
+          fi
 
       - name: Commit and push updates
         if: ${{ steps.check.outputs.changed == 'true' }}
