--- a/web.config
+++ b/web.config
@@ -41,8 +41,10 @@
                 <add name="X-Frame-Options" value="DENY" />
                 <add name="X-Content-Type-Options" value="nosniff" />
                 <add name="X-XSS-Protection" value="1; mode=block" />
+                <add name="X-Permitted-Cross-Domain-Policies" value="none" />
                 <add name="Referrer-Policy" value="strict-origin-when-cross-origin" />
-                <add name="Content-Security-Policy" value="default-src 'self'; script-src 'self' 'unsafe-inline' https://cdn.jsdelivr.net https://www.googletagmanager.com; style-src 'self' 'unsafe-inline' https://cdn.jsdelivr.net; img-src 'self' data: https:; font-src 'self' https://cdn.jsdelivr.net; connect-src 'self' https://www.google-analytics.com; frame-ancestors 'none';" />
+                <add name="Content-Security-Policy" value="default-src 'self'; script-src 'self' 'unsafe-inline' https://cdn.jsdelivr.net https://www.googletagmanager.com 'sha384-*'; style-src 'self' 'unsafe-inline' https://cdn.jsdelivr.net; img-src 'self' data: https:; font-src 'self' https://cdn.jsdelivr.net; connect-src 'self' https://ms-central-api.proudsand-cb69619a.eastus.azurecontainerapps.io https://www.google-analytics.com; frame-ancestors 'none'; require-sri-for script;" />
+                <!-- Note: unsafe-inline required for HTM templates. TODO: Migrate to nonce-based CSP -->
                 <remove name="Server" />
                 <remove name="X-Powered-By" />
             </customHeaders>
